--- a/packages/proxy-server/public/remote-control/index.html
+++ b/packages/proxy-server/public/remote-control/index.html
@@ -248,8 +248,7 @@
         </div>
     </div>
 
-    <script src="./index.js" ></script>
-    <script src="./client.js" ></script>
+    <script src="dist/client.js" type="module"></script>
 
 </body>
 
